--- a/public/static/css/work.scss
+++ b/public/static/css/work.scss
@@ -1,3 +1,32 @@
+*{
+  appearance: none;
+}
+
+html, body, #root{
+height: 100%;
+min-height: 100%;
+background: #333333;
+}
+
+body {
+margin: 0;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+
+.body {
+overflow-y: scroll;
+scrollbar-width: none; /* Firefox */
+-ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+.body::-webkit-scrollbar { /* WebKit */
+width: 0;
+height: 0;
+}
+
 .workMother {
   height: 100%;
   .workMain {
