removed translate on home buttons

--- a/public/static/css/index.scss
+++ b/public/static/css/index.scss
@@ -155,7 +155,7 @@
                   // transform: translateY(0px);
 
                   box-shadow: none;
-                  transform: translateY(0px);
+                  // transform: translateY(0px);
                   filter: brightness(100%);
                 }
                 to {
@@ -164,7 +164,7 @@
                   // transform: translateY(-1px);
 
                   box-shadow: -2px 2px black, -4px 3px #ffffff;
-                  transform: translateY(-3px);
+                  // transform: translateY(-3px);
                   filter: brightness(120%);
                 }
               }
